<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activities.ViewTaskActivity">

    <FrameLayout
        android:id="@+id/loadingContainer"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="#FFFFFF"
        android:translationZ="10dp"
        android:visibility="visible"
        tools:visibility="invisible">

        <ProgressBar
            android:id="@+id/progressBar"
            style="?android:attr/progressBarStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal|center_vertical" />

    </FrameLayout>

    <TextView
        android:id="@+id/labelTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:text="@string/label_title"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/editTitle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:ems="10"
        android:hint="@string/content_desc_task_title"
        android:importantForAutofill="no"
        android:inputType="textPersonName"
        android:minHeight="48dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/labelTitle"
        tools:ignore="TextContrastCheck" />

    <TextView
        android:id="@+id/labelDescription"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:text="@string/label_description"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/editTitle" />

    <EditText
        android:id="@+id/editDescription"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:ems="10"
        android:hint="@string/content_desc_task_description"
        android:importantForAutofill="no"
        android:inputType="textPersonName"
        android:minHeight="48dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/labelDescription"
        tools:ignore="TextContrastCheck" />

    <TextView
        android:id="@+id/labelColorPicker"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:text="@string/label_color_picker"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/editDescription" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/colorOne"
        android:layout_width="48dp"
        android:layout_height="48dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:backgroundTint="#F64D4D"
        android:insetTop="0dp"
        android:insetBottom="0dp"
        android:text="@string/label_title"
        android:textSize="0sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/labelColorPicker"
        app:strokeColor="#000000"
        tools:ignore="DuplicateSpeakableTextCheck,TextContrastCheck" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/colorTwo"
        android:layout_width="48dp"
        android:layout_height="48dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:backgroundTint="#FF8543"
        android:insetTop="0dp"
        android:insetBottom="0dp"
        android:text="@string/label_title"
        android:textSize="0sp"
        app:layout_constraintEnd_toStartOf="@id/colorThree"
        app:layout_constraintStart_toEndOf="@id/colorOne"
        app:layout_constraintTop_toBottomOf="@id/labelColorPicker"
        app:strokeColor="#000000"
        tools:ignore="TextContrastCheck" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/colorThree"
        android:layout_width="48dp"
        android:layout_height="48dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:backgroundTint="#FFEB3B"
        android:insetTop="0dp"
        android:insetBottom="0dp"
        android:text="@string/label_title"
        android:textSize="0sp"
        app:layout_constraintEnd_toStartOf="@id/colorFour"
        app:layout_constraintStart_toEndOf="@id/colorTwo"
        app:layout_constraintTop_toBottomOf="@id/labelColorPicker"
        app:strokeColor="#000000"
        tools:ignore="TextContrastCheck" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/colorFour"
        android:layout_width="48dp"
        android:layout_height="48dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:backgroundTint="#B5F61C"
        android:insetTop="0dp"
        android:insetBottom="0dp"
        android:text="@string/label_title"
        android:textSize="0sp"
        app:layout_constraintEnd_toStartOf="@id/colorFive"
        app:layout_constraintStart_toEndOf="@id/colorThree"
        app:layout_constraintTop_toBottomOf="@id/labelColorPicker"
        app:strokeColor="#000000"
        tools:ignore="TextContrastCheck" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/colorFive"
        android:layout_width="48dp"
        android:layout_height="48dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:insetTop="0dp"
        android:insetBottom="0dp"
        android:text="@string/label_title"
        android:textSize="0sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/colorFour"
        app:layout_constraintTop_toBottomOf="@id/labelColorPicker"
        app:strokeColor="#000000"
        tools:ignore="TextContrastCheck" />

    <TextView
        android:id="@+id/labelIcon"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/icon_picker"
        android:layout_marginTop="16dp"
        android:layout_marginStart="16dp"
        app:layout_constraintTop_toBottomOf="@id/colorFive"
        app:layout_constraintStart_toStartOf="parent"
        />

    <ImageView
        android:id="@+id/iconPicker"
        android:layout_width="48dp"
        android:layout_height="48dp"
        android:layout_marginTop="16dp"
        android:clickable="true"
        android:focusable="true"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/labelIcon" />

    <TextView
        android:id="@+id/editDatePicker"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="8dp"
        android:clickable="true"
        android:ems="10"
        android:focusable="true"
        android:hint="@string/label_date_picker"
        android:minHeight="48dp"
        android:paddingTop="16dp"
        app:layout_constraintEnd_toStartOf="@+id/divider"
        app:layout_constraintStart_toEndOf="@+id/imageView"
        app:layout_constraintTop_toBottomOf="@+id/iconPicker" />

    <Button
        android:id="@+id/confirm"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:backgroundTint="@color/main_orange"
        android:insetTop="0dp"
        android:insetBottom="0dp"
        android:text="@string/set_done"
        app:cornerRadius="0dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        tools:ignore="TextContrastCheck" />

    <View
        android:id="@+id/divider"
        android:layout_width="1dp"
        android:layout_height="match_parent"
        android:background="?android:attr/listDivider"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:layout_editor_absoluteY="1dp"
        android:visibility="invisible"
        />

    <TextView
        android:id="@+id/editTimePicker"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="16dp"
        android:clickable="true"
        android:ems="10"
        android:focusable="true"
        android:hint="@string/label_time_picker"
        android:minHeight="48dp"
        android:paddingTop="16dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/imageView2"
        app:layout_constraintTop_toBottomOf="@+id/iconPicker" />

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        app:layout_constraintBottom_toBottomOf="@+id/editDatePicker"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/iconPicker"
        app:srcCompat="@drawable/ic_calendar_today" />

    <ImageView
        android:id="@+id/imageView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="@+id/editTimePicker"
        app:layout_constraintStart_toEndOf="@+id/divider"
        app:layout_constraintTop_toTopOf="@+id/editTimePicker"
        app:srcCompat="@drawable/ic_time" />

</androidx.constraintlayout.widget.ConstraintLayout>